galaxy home 베타 버전 일단 완성

--- a/src/app/pages/pc/home/business/galaxy-business.component.html
+++ b/src/app/pages/pc/home/business/galaxy-business.component.html
@@ -14,10 +14,13 @@
         <div class="rotate-box-1-wrapper">
             <div class="container">
                 <div class="row">
-                    <div class="wow slideInLeft fact text-center">
-                        <div class="rotate-box-info">
-                            <h1>THE WORLD OF INFINITE CONTENTS</h1>
-                            <span class="subTitle">무한한 콘텐츠의 세계로 당신을 초대합니다.</span>
+                    <div class="rotate-fact-start wow slideInLeft fact text-center">
+                        <div class="rotate-box-1 square-icon">
+                            <div class="fact-header col-md-12 col-sm-12">
+                                <img src="assets/images/home/business/world_content_m.png" width="100%" />
+                                <!-- <h1>THE WORLD OF INFINITE CONTENTS</h1> -->
+                                <span class="subTitle">무한한 콘텐츠의 세계로 당신을 초대합니다.</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -25,37 +28,38 @@
                 <div class="row">
                     <div class="fact col-md-6 col-sm-6 wow fadeInLeft">
                         <div class="fact-inner">
-                            <h4>갤럭시 코퍼레이션은 IP, 플랫폼, 메타버스 서비스로 비즈니스를 만드는 집단입니다.</h4>
+                            <img src="assets/images/home/business/business_title.png" width="100%"/>
+                            <!-- <h4>갤럭시 코퍼레이션은 IP, 플랫폼, 메타버스 서비스로 비즈니스를 만드는 집단입니다.</h4> -->
                         </div>
                     </div>
                     <div class="fact col-md-6 col-sm-6">
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.1s">
                             <h4>SAMESIDE</h4>
-                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
                             <div class="text-left">
                                 <a href="#" target="_blank" role="button">
-                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto" />
                                 </a>
                             </div>
                         </div>
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.2s">
                             <h4>JUPITER Ent.</h4>
-                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
                             <div class="text-left">
                                 <a href="#" target="_blank" role="button">
-                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto" />
                                 </a>
                             </div>
                         </div>
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.3s">
                             <h4>BIG FLASH</h4>
-                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
                             <div class="text-left">
                                 <a href="#" target="_blank" role="button">
-                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto" />
                                 </a>
                             </div>
                         </div>
@@ -72,11 +76,11 @@
                     <div class="fact col-md-6 col-sm-6">
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.4s">
                             <h4>YOURABORATION</h4>
-                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
                             <div class="text-left">
                                 <a href="#" target="_blank" role="button">
-                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto" />
                                 </a>
                             </div>
                         </div>
@@ -93,21 +97,21 @@
                     <div class="fact col-md-6 col-sm-6">
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.1s">
                             <h4>UNIVERSE RAIL 999</h4>
-                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
                             <div class="text-left">
                                 <a href="#" target="_blank" role="button">
-                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto" />
                                 </a>
                             </div>
                         </div>
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.2s">
                             <h4>WHITE HOLE</h4>
-                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
                             <div class="text-left">
                                 <a href="#" target="_blank" role="button">
-                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto" />
                                 </a>
                             </div>
                         </div>
