--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    <div class="contact-info">
+                    <div class="contact-info" style="text-align: center;">
                         <h5>GALAXY DNA는 일하는 방식과 가치 판단의 기준을 의미합니다.</h5>
                     </div>
                 </div>
