--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -17,16 +17,23 @@
                     <div class="rotate-box-1 square-icon">
                         <div class="fact-header col-md-12 col-sm-12">
                             <div class="pc">
-                                <img src="assets/images/home/intro/first.png" width="50%" height="95%"/>
+                                <img src="assets/images/home/intro/first.png" width="50%" height="95%" />
                             </div>
                             <div class="mobile">
-                                <img src="assets/images/home/intro/first_m.png" width="100%"/>
+                                <img src="assets/images/home/intro/first_m.png" width="100%" />
                             </div>
                             <!-- <h1>WE CREATE</h1>
                             <h1>METARVERS</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
-                            <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은 즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는 새로운 세계를 만들어 나갑니다.</span>
+                            <div class="pc">
+                                <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은</span>
+                                <span class="subTitle">즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는</span>
+                                <span class="subTitle">새로운 세계를 만들어 나갑니다.</span>
+                            </div>
+                            <div class="mobile">
+                                <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은 즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는 새로운 세계를 만들어 나갑니다.</span>
+                            </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion1>
                             <app-culture [motion4Element]="motion4Element"></app-culture>
@@ -36,11 +43,24 @@
                 <div class="rotate-fact col-md-12 col-sm-6 wow slideInRight" data-wow-delay="0.2s">
                     <div class="rotate-box-1 square-icon ">
                         <div class="fact-header col-md-12 col-sm-12">
-                            <h1>NEW WORLD</h1>
-                            <h1>CONNECTION</h1>
+                            <div class="pc">
+                                <img src="assets/images/home/intro/second.png" width="50%" height="95%" />
+                            </div>
+                            <div class="mobile">
+                                <img src="assets/images/home/intro/second_m.png" width="100%" />
+                            </div>
+                            <!-- <h1>NEW WORLD</h1>
+                            <h1>CONNECTION</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
-                            <span class="subTitle">우리가 만든 페르소나 별속에서 무한한 콘텐츠 세상을 연결하고 우리의 IP들이 다양한 비즈니스로 연결되어 메타버스 통합 허브를 만들어 가고 있습니다.</span>
+                            <div class="pc">
+                                <span class="subTitle">우리가 만든 페르소나 별속에서 무한한 콘텐츠 세상을 연결하고</span>
+                                <span class="subTitle">우리의 IP들이 다양한 비즈니스로 연결되어 메타버스 통합</span>
+                                <span class="subTitle">허브를 만들어 가고 있습니다.</span>
+                            </div>
+                            <div class="mobile">
+                                <span class="subTitle">우리가 만든 페르소나 별속에서 무한한 콘텐츠 세상을 연결하고 우리의 IP들이 다양한 비즈니스로 연결되어 메타버스 통합 허브를 만들어 가고 있습니다.</span>
+                            </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion2>
                             <app-persona [motion3Element]="motion3Element"></app-persona>
@@ -50,11 +70,23 @@
                 <div class="rotate-fact col-md-12 col-sm-6 wow zoomIn" data-wow-delay="0.3s">
                     <div class="rotate-box-1 square-icon ">
                         <div class="fact-header col-md-12 col-sm-12">
-                            <h1>INSPIRE</h1>
-                            <h1>PERSONA</h1>
+                            <div class="pc">
+                                <img src="assets/images/home/intro/third.png" width="50%" height="95%" />
+                            </div>
+                            <div class="mobile">
+                                <img src="assets/images/home/intro/third_m.png" width="100%" />
+                            </div>
+                            <!-- <h1>INSPIRE</h1>
+                            <h1>PERSONA</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
-                            <span class="subTitle">온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해 우리가 온오프라인으로 편하게 움직일수 있는 개체를 만들어냅니다.</span>
+                            <div class="pc">
+                                <span class="subTitle">온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해</span>
+                                <span class="subTitle">우리가 온오프라인으로 편하게 움직일수 있는 개체를 만들어냅니다.</span>
+                            </div>
+                            <div class="mobile">
+                                <span class="subTitle">온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해 우리가 온오프라인으로 편하게 움직일수 있는 개체를 만들어냅니다.</span>
+                            </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion3>
                             <app-world [motion2Element]="motion2Element"></app-world>
@@ -64,11 +96,23 @@
                 <div class="rotate-fact col-md-12 col-sm-6 wow zoomIn" data-wow-delay="0.4s">
                     <div class="rotate-box-1 square-icon">
                         <div class="fact-header col-md-12 col-sm-12">
-                            <h1>CULTURE</h1>
-                            <h1>CREATION</h1>
+                            <div class="pc">
+                                <img src="assets/images/home/intro/fourth.png" width="50%" height="95%" />
+                            </div>
+                            <div class="mobile">
+                                <img src="assets/images/home/intro/fourth_m.png" width="100%" />
+                            </div>
+                            <!-- <h1>CULTURE</h1>
+                            <h1>CREATION</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
-                            <span class="subTitle">우리가 만든 메타버스의 세상 속에 갤럭시의 IP가 새로운 세상을 만들어 무엇이든 이루어지는 세계를 같이합니다.</span>
+                            <div class="pc">
+                                <span class="subTitle">우리가 만든 메타버스의 세상 속에 갤럭시의 IP가</span>
+                                <span class="subTitle">새로운 세상을 만들어 무엇이든 이루어지는 세계를 같이합니다.</span>
+                            </div>
+                            <div class="mobile">
+                                <span class="subTitle">우리가 만든 메타버스의 세상 속에 갤럭시의 IP가 새로운 세상을 만들어 무엇이든 이루어지는 세계를 같이합니다.</span>
+                            </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion4>
                             <app-metaverse [motion1Element]="motion1Element"></app-metaverse>
