--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -107,7 +107,7 @@
                                 <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
                                     <div>
                                         <a href="#">
-                                            <img src="assets/images/home/ip/view_more.png" alt="title" />
+                                            <img src="assets/images/home/ip/view_more.png" alt="title" width="100%"/>
                                         </a>
                                     </div>
                                 </div>
