--- a/src/app/pages/pc/home/social/galaxy-social.component.html
+++ b/src/app/pages/pc/home/social/galaxy-social.component.html
@@ -17,9 +17,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 wow slideInLeft fact text-center">
-                    <span class="subTitle">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
-                    <span class="subTitle">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
-                    <span class="subTitle">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
+                    <div class="pc">
+                        <span class="subTitle">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
+                        <span class="subTitle">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
+                        <span class="subTitle">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
+                    </div>
+                    <div class="mobile">
+                        <span class="subTitle">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
+                        <span class="subTitle">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
+                        <span class="subTitle">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
+                    </div>
                 </div>
             </div>
             <div class="extra-space-l"></div>
