--- a/src/app/pages/pc/layout/galaxy-layout.component.html
+++ b/src/app/pages/pc/layout/galaxy-layout.component.html
@@ -21,10 +21,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="page-scroll" href="#company-section"><img src="assets/images/home/header/icon_company.png"></a></li>
-                        <li><a class="page-scroll" href="#galaxy-ip-section"><img src="assets/images/home/header/icon_ip.png"></a></li>
-                        <li><a class="page-scroll" href="#business-section"><img src="assets/images/home/header/icon_business.png"></a></li>
-                        <li><a class="page-scroll" href="#contact-section"><img src="assets/images/home/header/icon_contact.png"></a></li>
+                        <li><a class="page-scroll" href="#company-section"><img src="assets/images/home/header/icon_company.png" width="50%"></a></li>
+                        <li><a class="page-scroll" href="#galaxy-ip-section"><img src="assets/images/home/header/icon_ip.png" width="50%"></a></li>
+                        <li><a class="page-scroll" href="#business-section"><img src="assets/images/home/header/icon_business.png" width="50%"></a></li>
+                        <li><a class="page-scroll" href="#contact-section"><img src="assets/images/home/header/icon_contact.png" width="50%"></a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
