--- a/src/styles.css
+++ b/src/styles.css
@@ -1517,6 +1517,144 @@ p.subtitle {
   transform: rotate(-45deg);
 }
 /* ===== End buttons ===== */
+/* === Navbar === */
+.navbar-default .navbar-brand,
+.navbar-default .navbar-brand:focus {
+  color: #fff;
+}
+.navbar-default .navbar-brand:hover {
+  color: #fff;
+}
+.navbar-default,
+.navbar-default.navbar-fixed-top.navbar-shrink {
+  background-color: black;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #a9a9a9;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li.active > a,
+.navbar-default .navbar-nav > .active > a {
+  color: #fff !important;
+}
+.navbar-default.navbar-fixed-top.navbar-shrink .navbar-nav > li > a {
+  color: #a9a9a9;
+}
+.navbar-default.navbar-shrink .navbar-nav > li > a:hover,
+.navbar-default.navbar-shrink .navbar-nav > li > a:focus,
+.navbar-default.navbar-shrink .navbar-nav > li.active > a {
+  color: #fff;
+}
+.navbar-default.navbar-shrink .navbar-nav > li.active > a {
+  -webkit-box-shadow: inset 0 3px #fff !important;
+  -moz-box-shadow: inset 0 3px #fff !important;
+  box-shadow: inset 0 3px #fff !important;
+}
+.navbar-default .dropdown-menu {
+  border: 1px solid #fff;
+  border-top: 2px solid #fff;
+  -webkit-box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08);
+}
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus,
+.dropdown-menu > li > a.active,
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus {
+  color: #ffff;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #fff;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  background-color: transparent;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus,
+.navbar-default .navbar-nav > li.active > a {
+}
+/* Navbar inverse */
+.navbar-inverse {
+  background-color: #111;
+  color: #ccc;
+}
+.navbar-inverse .navbar-brand {
+  color: #ccc;
+}
+.navbar-inverse .navbar-nav > li > a {
+  color: #ccc;
+}
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus {
+  background-color: transparent;
+  color: #111;
+}
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus,
+.navbar-inverse .navbar-nav > li.active > a {
+  color: #111;
+}
+/* Navbar inverse dropdown */
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus {
+  color: #111;
+}
+.navbar-inverse .dropdown-menu {
+  background-color: #1f1f1f;
+  border: 1px solid #111;
+  border-top: 2px solid #111;
+}
+.navbar-inverse .dropdown-menu > li > a {
+  color: #ccc;
+}
+.navbar-inverse .dropdown-menu > li > a:hover,
+.navbar-inverse .dropdown-menu > li > a:focus {
+  color: #111;
+}
+/* Navbar fixed */
+.navbar-default.navbar-fixed-top.navbar-shrink .navbar-brand {
+  color: #fff;
+}
+.navbar-default.navbar-fixed-top.navbar-shrink .navbar-brand:hover {
+  color: #111;
+}
+/* Navbar fixed inverse */
+.navbar-inverse.navbar-fixed-top.navbar-shrink {
+  background-color: #111;
+}
+
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a {
+  color: #ccc;
+}
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a:hover,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a:focus,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a:hover,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a:focus,
+.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li.active > a {
+  background-color: transparent;
+  color: #111;
+}
+
+.navbar-fixed-top.navbar-shrink .navbar-brand,
+.navbar-fixed-top.navbar-shrink .navbar-brand:focus,
+body.boxed
+  .body
+  .navbar-inverse.navbar-transparent.navbar-shrink
+  .navbar-brand {
+  color: #ccc;
+}
+.navbar-fixed-top.navbar-shrink .navbar-brand:hover {
+  color: #111;
+}
 
 /*==================================================
 =            Bootstrap 3 Media Queries             =
@@ -1876,6 +2014,16 @@ p.subtitle {
     font-size: 15px;
     display: block;
   }
+
+  .navbar-nav > li > a {
+    padding: 10px 0 !important;
+    color: #fff;
+    width: 100%;
+  }
+
+  .navbar-default.navbar-shrink .navbar-nav > li.active > a {
+    box-shadow: none !important;
+  }
 }
 
 /* Extra Small Devices, Phones */
@@ -1894,145 +2042,6 @@ a,
 a:hover,
 a:focus {
   color: #676d75;
-}
-
-/* === Navbar === */
-.navbar-default .navbar-brand,
-.navbar-default .navbar-brand:focus {
-  color: #fff;
-}
-.navbar-default .navbar-brand:hover {
-  color: #fff;
-}
-.navbar-default,
-.navbar-default.navbar-fixed-top.navbar-shrink {
-  background-color: black;
-}
-.navbar-default .navbar-nav > li > a {
-  color: #a9a9a9;
-}
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus,
-.navbar-default .navbar-nav > li.active > a,
-.navbar-default .navbar-nav > .active > a {
-  color: #fff !important;
-}
-.navbar-default.navbar-fixed-top.navbar-shrink .navbar-nav > li > a {
-  color: #a9a9a9;
-}
-.navbar-default.navbar-shrink .navbar-nav > li > a:hover,
-.navbar-default.navbar-shrink .navbar-nav > li > a:focus,
-.navbar-default.navbar-shrink .navbar-nav > li.active > a {
-  color: #fff;
-}
-.navbar-default.navbar-shrink .navbar-nav > li.active > a {
-  -webkit-box-shadow: inset 0 3px #fff !important;
-  -moz-box-shadow: inset 0 3px #fff !important;
-  box-shadow: inset 0 3px #fff !important;
-}
-.navbar-default .dropdown-menu {
-  border: 1px solid #fff;
-  border-top: 2px solid #fff;
-  -webkit-box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08);
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08);
-}
-.dropdown-menu > li > a:hover,
-.dropdown-menu > li > a:focus,
-.dropdown-menu > li > a.active,
-.dropdown-menu > .active > a,
-.dropdown-menu > .active > a:hover,
-.dropdown-menu > .active > a:focus {
-  color: #ffff;
-}
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:hover,
-.navbar-default .navbar-nav > .open > a:focus {
-  color: #fff;
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  background-color: transparent;
-}
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus,
-.navbar-default .navbar-nav > li.active > a {
-}
-/* Navbar inverse */
-.navbar-inverse {
-  background-color: #111;
-  color: #ccc;
-}
-.navbar-inverse .navbar-brand {
-  color: #ccc;
-}
-.navbar-inverse .navbar-nav > li > a {
-  color: #ccc;
-}
-.navbar-inverse .navbar-nav > .active > a,
-.navbar-inverse .navbar-nav > .active > a:hover,
-.navbar-inverse .navbar-nav > .active > a:focus {
-  background-color: transparent;
-  color: #111;
-}
-.navbar-inverse .navbar-nav > li > a:hover,
-.navbar-inverse .navbar-nav > li > a:focus,
-.navbar-inverse .navbar-nav > li.active > a {
-  color: #111;
-}
-/* Navbar inverse dropdown */
-.navbar-inverse .navbar-nav > .open > a,
-.navbar-inverse .navbar-nav > .open > a:hover,
-.navbar-inverse .navbar-nav > .open > a:focus {
-  color: #111;
-}
-.navbar-inverse .dropdown-menu {
-  background-color: #1f1f1f;
-  border: 1px solid #111;
-  border-top: 2px solid #111;
-}
-.navbar-inverse .dropdown-menu > li > a {
-  color: #ccc;
-}
-.navbar-inverse .dropdown-menu > li > a:hover,
-.navbar-inverse .dropdown-menu > li > a:focus {
-  color: #111;
-}
-/* Navbar fixed */
-.navbar-default.navbar-fixed-top.navbar-shrink .navbar-brand {
-  color: #fff;
-}
-.navbar-default.navbar-fixed-top.navbar-shrink .navbar-brand:hover {
-  color: #111;
-}
-/* Navbar fixed inverse */
-.navbar-inverse.navbar-fixed-top.navbar-shrink {
-  background-color: #111;
-}
-
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a {
-  color: #ccc;
-}
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a:hover,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > .active > a:focus,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a:hover,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li > a:focus,
-.navbar-inverse.navbar-fixed-top.navbar-shrink .navbar-nav > li.active > a {
-  background-color: transparent;
-  color: #111;
-}
-
-.navbar-fixed-top.navbar-shrink .navbar-brand,
-.navbar-fixed-top.navbar-shrink .navbar-brand:focus,
-body.boxed
-  .body
-  .navbar-inverse.navbar-transparent.navbar-shrink
-  .navbar-brand {
-  color: #ccc;
-}
-.navbar-fixed-top.navbar-shrink .navbar-brand:hover {
-  color: #111;
 }
 
 /* === Text Carousel === */
