일단 스크롤 막음

--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -1,6 +1,6 @@
 <section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5">
-    <div #galaxy3dContainer></div>
-    <div class="container">
+    <div style="position: absolute;" #galaxy3dContainer></div>
+    <div style="position: relative; left: 0; right: 0;" class="container">
         <div class="caption text-center text-white" data-stellar-ratio="0.7">
             <div id="owl-intro-text" class="owl-carousel">
                 <div class="item">
