--- a/src/app/pages/pc/layout/galaxy-layout.component.html
+++ b/src/app/pages/pc/layout/galaxy-layout.component.html
@@ -39,7 +39,7 @@
     <footer class="text-off-white">
         <div class="footer">
             <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
-                <p class="copyright"> Copyright &copy; 2021 - All Right <a href="#" class="theme-author">GALAXY Corp</a> Reserved.</p>
+                <p class="copyright"> Copyright &copy; <a href="#" class="theme-author">GALAXY Corp</a> - All Right Reserved.</p>
             </div>
         </div>
     </footer>
