--- a/src/app/pages/pc/home/metaverse/webgl-geometry/webgl-connection/connection.component.html
+++ b/src/app/pages/pc/home/metaverse/webgl-geometry/webgl-connection/connection.component.html
@@ -1,1 +1,2 @@
-<div #galaxy3dConainterElement></div>
+<div style="position: absolute;" #cover></div>
+<div style="position: relative; left: 0; right: 0;" #galaxy3dConainterElement></div>
